--- a/index.html
+++ b/index.html
@@ -5,22 +5,112 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css" />
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
     <title>Sudoku Solver</title>
 </head>
 <body>
     <h1>Sudoku Solver</h1>
     <button id="solve">Solve Puzzle</button>
     <section id="board">
-        <div class="cell">1 <input class="number-input" placeholder="1-9"></div>
-        <div class="cell">2 <input class="number-input" placeholder="1-9"></div>
-        <div class="cell">3 <input class="number-input" placeholder="1-9"></div>
-        <div class="cell">4 <input class="number-input" placeholder="1-9"></div>
-        <div class="cell">5 <input class="number-input" placeholder="1-9"></div>
-        <div class="cell">6 <input class="number-input" placeholder="1-9"></div>
-        <div class="cell">7 <input class="number-input" placeholder="1-9"></div>
-        <div class="cell">8 <input class="number-input" placeholder="1-9"></div>
-        <div class="cell">9 <input class="number-input" placeholder="1-9"></div>
+        <section class="square">
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+        </section>
+        <section class="square">
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+        </section>
+        <section class="square">
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+        </section>
+        <section class="square">
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+        </section>
+        <section class="square">
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+        </section>
+        <section class="square">
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+        </section>
+        <section class="square">
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+        </section>
+        <section class="square">
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+        </section>
+        <section class="square">
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+            <div class="cell"> <input class="number-input" placeholder="1-9"></div>
+        </section>
     </section>
 </body>
 </html>
